--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^2.23.0",
+    "axios": "^0.21.1",
     "next": "latest",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.4",
     "postcss": "^8.1.10",
+    "prisma": "^2.23.0",
     "tailwindcss": "^2.1.1"
   }
 }
