--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.3.1",
     "@prisma/client": "^2.23.0",
+    "@stripe/stripe-js": "^1.15.0",
     "axios": "^0.21.1",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "stripe": "^8.150.0",
     "swr": "^0.5.6"
   },
   "devDependencies": {
