--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^2.23.0",
     "@stripe/stripe-js": "^1.15.0",
     "axios": "^0.21.1",
+    "micro": "^9.3.4",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
